# Traductor-de-Textos-en-Espanol-al-Sistema-Braille

./: CMakeLists.txt  README.md  bina_w.cpp  bina_w.txt  botones.cpp  detectRect.cpp  detectRect.txt  main.cpp  matriz.cpp  matriz.txt  principal.cpp  rotayCorta.cpp  rotayCorta.txt  tesseract.cpp  tesseract.txt  vision.cpp
.github/workflows/: codeql-analysis.yml
